
2009-03-16 23:27 Ali aliov@xfce.org 
	 * : Added freedesktop.PowerManagement power interfaces and methods

2009-03-16 19:06 Ali aliov@xfce.org 
	 * : Add a weak reference on the adapter object+remove unused signals

2009-03-16 17:36 Ali aliov@xfce.org 
	 * : Fix wrong alarm settings

2009-03-16 15:39 Ali aliov@xfce.org 
	 * : Set brightness idle level to the last user selected level+Fix a bug in SetCpuFreqGovernor that was causing a proxy disconnection

2009-03-15 13:57 Ali aliov@xfce.org 
	 * : Added some icons from gpm+Catch brightness key to avoid display flickering

2009-03-15 11:34 Ali aliov@xfce.org 
	 * : Removed no longer available .la file from libxfpm

2009-03-15 11:12 Ali aliov@xfce.org 
	 * : Patched to fix makefile typo and correct the POTFILES.in (Yves Alexis)+Use a weak reference for the common objects

2009-03-14 19:26 Ali aliov@xfce.org 
	 * : Added the missing desktop file, Thanks to Mike for pointing out

2009-03-14 17:23 Ali aliov@xfce.org 
	 * : Added desktop file to be installed in xdt/autostart

2009-03-14 16:40 Ali aliov@xfce.org 
	 * : Idle function to reduce screen luminosity after a certain time+fix a bug in the adapter code

2009-03-13 16:31 Ali aliov@xfce.org 
	 * : Move common code to hal-device+ fix issue with the apater of the previous revision

2009-03-13 14:01 Ali aliov@xfce.org 
	 * : Dropping the libhal dependency, just doing simple proxy calls to get informations from hald

2009-03-11 20:38 Ali aliov@xfce.org 
	 * : Implement critical battery level settings+the option to disable lock screen when suspend/hibernate

2009-03-11 13:33 Ali aliov@xfce.org 
	 * : Set dpms to standby or suspend depending on the user settings

2009-03-11 13:06 Ali aliov@xfce.org 
	 * : Fix infinite loop caused by g_signal_connect+added advanced settings in the dialog

2009-03-10 21:13 Ali aliov@xfce.org 
	 * : properties shutdown,suspend and hibernate are noe strings in xfce4-power-manager channel configuration

2009-03-10 13:24 Ali aliov@xfce.org 