@@ -1,4 +1,7 @@
 
+2009-03-16 23:48 Ali aliov@xfce.org 
+	 * : Run as daemon by default unless no-daemon is specified
+
 2009-03-16 23:27 Ali aliov@xfce.org 
 	 * : Added freedesktop.PowerManagement power interfaces and methods
 
